--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
 }
 
 h1 {
+  color: #ee8572;
   display: inline-block;
   position: relative;
   bottom: 80px;
@@ -19,6 +20,7 @@ h2{
 }
 
 h3{
+  color: #63b7af;
   font-family: 'Oswald', sans-serif;
   font-size: 30px;
 }
@@ -71,11 +73,22 @@ bottom: 40px;
 
 
 .para{
+  font-size: 20px;
+  color: #ee8572;
   position: relative;
   bottom: 80px;
 }
 
+.Video{
+  line-height: 2;
+}
+
+.DM{
+  line-height: 2;
+}
+
 .profile-Para{
+  line-height: 2;
   margin: 50px;
 }
 
